@@ -1,41 +1,46 @@
 #!/usr/bin/env qore
 
-sub get_bool() { return True; }
-sub get_int() { return 1; }
-sub test_int(int $x) {}
-sub test_mutex(Mutex $m) {}
-sub test_bool(bool $b) {}
+%requires qore >= 0.8
+%require-types
 
-sub do_neg_test($c, $name) {
+sub get_bool() returns bool { return True; }
+sub get_int() returns int { return 1; }
+sub test_int(int $x) returns nothing {}
+sub test_mutex(Mutex $m) returns nothing {}
+sub test_bool(bool $b) returns nothing {}
+
+sub do_neg_test(code $c, string $name) returns nothing {
     try {
 	$c();
 	printf("ERROR: %s\n", $name);
     }
-    catch ($ex)
+    catch (hash $ex)
 	printf("OK: %s\n", $name);
 }
 
-sub do_pos_test($c, $name) {
+sub do_pos_test(code $c, string $name) returns nothing {
     try {
 	$c();
 	printf("OK: %s\n", $name);
     }
-    catch ($ex)
+    catch (hash $ex)
 	printf("ERROR: %s: %s: %s\n", $name, $ex.err, $ex.desc);
 }
 
-sub main() {
-    my $t = sub () { my (int $x, string $y) = (get_bool(), get_int()); };
+sub main() returns nothing {
+    my code $t = sub () returns nothing { my (int $x, string $y) = (get_bool(), get_int()); };
     do_neg_test($t, "list assignment");
-    $t = sub () { my int $x = get_bool(); };
+    $t = sub () returns nothing { my int $x = get_bool(); };
     do_neg_test($t, "simple assignment");
-    $t = sub () { my $x = True; test_int($x); };
+    $t = sub () returns nothing { my any $x = True; test_int($x); };
     do_neg_test($t, "argument type");
 
-    $t = sub () { my int $i; test_int($i); };
+    $t = sub () returns nothing { my int $i; test_int($i); };
     do_pos_test($t, "local variable default value");
-    $t = sub () { our bool $ob; test_bool($ob); };
+    $t = sub () returns nothing { our bool $ob; test_bool($ob); };
     do_pos_test($t, "global variable default value");
+    $t = sub () returns nothing { my code $c = sub(reference $x) returns nothing { ++$x; }; my string $str; $c(\$str); };
+    do_neg_test($t, "reference type");
 }
 
 main();
