@@ -7,6 +7,8 @@
 	   there is not memberGate function
 	 * check for calls using callTypeInfo
 	 * fixed list assignment type checking
+	 * fixed closure return type verification with %require-types
+	 * fixed global variable default value assignment with hard types 
 
 2010.02.23: David Nichols
 	 * applied hard typing to lib/QC_GetOpt.cpp and to split in
